--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<h2>Player	1</h2>
 	<ul>
-		<li>Andrew</li>
+		<li>Daniel</li>
 		<li>A: LEFT</li>
 		<li>D: RIGHT</li>
 		<li>S: KNEEL</li>
@@ -27,6 +27,7 @@
 	</ul>
 	<h2>Player	2</h2>
 	<ul>
+		<li>Andrew</li>
 		<li>LEFT ARROW: LEFT</li>
 		<li>RIGHT ARROW: RIGHT</li>
 		<li>DOWN ARROW: KNEEL</li>
