added awesome theme song.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<li>W: KICK</li>
 		<li>E: ROUND HOUSE</li>
 	</ul>
+
 	<h2>Player	2</h2>
 	<ul>
 		<li>LEFT ARROW: LEFT</li>
@@ -37,5 +38,6 @@
 
 	<h2>Street Fighter Mimic: Built with Javascript and HTML</h2>
 	<p>Javascript file: ~100 lines of code</p>
+	<audio src="pokemon.mp3" loop="loop" autoplay="autoplay">
 </body>
 </html>
