--- a/index.html
+++ b/index.html
@@ -18,23 +18,25 @@
 	<h2>Player	1</h2>
 	<ul>
 		<li>Daniel</li>
+		<li>W: JUMP</li>
 		<li>A: LEFT</li>
 		<li>D: RIGHT</li>
 		<li>S: KNEEL</li>
-		<li>Q: PUNCH</li>
-		<li>W: KICK</li>
-		<li>E: ROUND HOUSE</li>
+		<li>F: PUNCH</li>
+		<li>G: KICK</li>
+		<li>H: ROUND HOUSE</li>
 	</ul>
 
 	<h2>Player	2</h2>
 	<ul>
 		<li>Andrew</li>
+		<li>UP ARROW: JUMP</li>
 		<li>LEFT ARROW: LEFT</li>
 		<li>RIGHT ARROW: RIGHT</li>
 		<li>DOWN ARROW: KNEEL</li>
-		<li><: PUNCH</li>
-		<li>>: KICK</li>
-		<li>?: ROUND HOUSE</li>
+		<li>P: PUNCH</li>
+		<li>[: KICK</li>
+		<li>]: ROUND HOUSE</li>
 	</ul>
 
 	<h2>Street Fighter Mimic: Built with Javascript and HTML</h2>
